--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <main class="fundo-beje">
     <div class="fundo-branco">
       <section class="introducao">
-        <img class="foto" src="/assets/images/image-omelette.jpeg" alt="Omelette-image">
+        <img class="foto" src="./assets/images/image-omelette.jpeg" alt="Omelette-image">
         <h1 class="titulo-principal">Simple Omelette Recipe</h1>
         <p>An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked to perfection, optionally filled with your choice of cheese, vegetables, or meats.</p>
         <div class="preparacao-container">
